<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.quantum</groupId>
	<artifactId>quantum-support</artifactId>
	<version>1.30</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<reportium-sdk.version>2.3</reportium-sdk.version>
		<selenium.version>4.2.2</selenium.version>
		<testng.version>6.10</testng.version>
		<cukes.version>1.2.5</cukes.version>
		<org.json.version>20220320</org.json.version>
		<perfectomobile.version>18.6.0.0</perfectomobile.version>
		<intellij.perfectomobile.version>18.4.0.0 </intellij.perfectomobile.version>
		<qaf.version>3.1.0</qaf.version>
		<qafsupport.version>3.1.0</qafsupport.version>
		<appium.client.version>8.1.1</appium.client.version>
	</properties>

	<scm>
		<developerConnection>scm:git:https://github.com/Project-Quantum/Quantum</developerConnection>
	</scm>

	<distributionManagement>
		<repository>
			<id>repo1.perfectomobile.com</id>
			<url>https://repo1.perfectomobile.com/repositories/maven</url>
		</repository>
	</distributionManagement>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>perfectomobile</id>
			<name>Perfecto mobile</name>
			<url>https://repo1.perfectomobile.com/public/repositories/maven</url>
		</repository>
		<repository>
			<id>jai</id>
			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cukes.version}</version>
		</dependency>
		

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>${org.json.version}</version>
		</dependency>
		<dependency>
			<groupId>com.perfectomobile</groupId>
			<artifactId>http-client</artifactId>
			<version>${perfectomobile.version}</version>
		</dependency>

		
		<dependency>
			<groupId>com.qmetry</groupId>
			<artifactId>qaf</artifactId>
			<version>${qaf.version}</version>
			<exclusions>
				<exclusion>
					<groupId>info.cukes</groupId>
					<artifactId>cucumber-java</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.testng</groupId>
					<artifactId>testng</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.seleniumhq.selenium</groupId>
					<artifactId>selenium-java</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.seleniumhq.selenium</groupId>
					<artifactId>java-client</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.seleniumhq.selenium</groupId>
					<artifactId>selenium-remote-driver</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.seleniumhq.selenium</groupId>
					<artifactId>selenium-api</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.seleniumhq.selenium</groupId>
					<artifactId>selenium-support</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.qmetry</groupId>
			<artifactId>qaf-support</artifactId>
			<version>${qafsupport.version}</version>
			<exclusions>
				<exclusion>
					<groupId>info.cukes</groupId>
					<artifactId>cucumber-java</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.testng</groupId>
					<artifactId>testng</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
			<groupId>io.appium</groupId>
			<artifactId>java-client</artifactId>
			<version>${appium.client.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-remote-driver</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-api</artifactId>
			<version>${selenium.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-support</artifactId>
			<version>${selenium.version}</version>
		</dependency>

		<dependency>
			<groupId>com.perfectomobile</groupId>
			<artifactId>pm-webdriver</artifactId>
			<version>${perfectomobile.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.perfectomobile</groupId>
			<artifactId>intellij-connector</artifactId>
			<version>${intellij.perfectomobile.version}</version>
		</dependency>
		<dependency>
			<groupId>com.perfecto.reporting-sdk</groupId>
			<artifactId>reportium-java</artifactId>
			<version>${reportium-sdk.version}</version>
		</dependency>
		<dependency>
			<groupId>com.perfecto.reporting-sdk</groupId>
			<artifactId>reportium-testng</artifactId>
			<version>${reportium-sdk.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.testng</groupId>
					<artifactId>testng</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>2.1.3</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.1-jre</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>2.12.3</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.12.3</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>[2.12.6.1,)</version>
		</dependency>

	</dependencies>
</project>